# cramershoup

./: .gitignore  .travis.yml  ChangeLog  Makefile  Makefile.am  README.md  config.h  config.status  configure.ac  libtool
pkgconfig/: Makefile.am  libcramershoup.pc.in
src/: Makefile  Makefile.am  cramershoup.8  cramershoup.c  cramershoup.h  log.c  random.h  test.c
src/.deps/: cramershoup-cramershoup.Po  cramershoup-log.Po
src/include/: cramershoup.h
src/lib/ed448/: arithmetic.s  barrett_field.s  crandom.s  ec_point.s  f_arithmetic.s  goldilocks.s  libgoldilocks.so.1  magic.s  p448.s  scalarmul.s  sha512.s
